--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -4,12 +4,14 @@
 /* ======== Global Colors ======== */
 $primary-color-white: #FFFFFF;
 $primary-color-back: #555;
+$primary-color-orange: #FFE6A5;
 
 /* ======== Colors erro ======== */
 $primary-color-green: #53B89A;
 $primary-color-red: #D62C2B;
 
-$secondary-color-green: #00ACA6;
 $secondary-color-white: #FFF;
+$secondary-color-green: #00ACA6;
 
+$tertiary-color-white: #D4D4D8;
 $tertiary-color-green: #05807D;
