--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -5,11 +5,15 @@
 $primary-color-white: #FFFFFF;
 $primary-color-back: #555;
 $primary-color-orange: #FFE6A5;
-
-/* ======== Colors erro ======== */
+$primary-color-concha: #FFFAEC;
 $primary-color-green: #53B89A;
 $primary-color-red: #D62C2B;
+$primary-color-PaleSilver: #E4E4E7;
+$primary-color-cyanBlue: #003133;
+$primary-color-darkCyan: #0A6564;
 
+
+/* ======== Colors erro ======== */
 $secondary-color-white: #FFF;
 $secondary-color-green: #00ACA6;
 
