--- a/style.css
+++ b/style.css
@@ -310,7 +310,7 @@ li {
 .pgHome__banners::after {
   content: "";
   position: absolute;
-  bottom: 1px;
+  bottom: 0;
   background: url("/img/bottom-banner.png") no-repeat center center;
   width: 100%;
   height: 130px;
@@ -390,7 +390,7 @@ li {
 /* For large devices - 1200px */
 @media screen and (max-width: 1200px) {
   .pgHome__banners {
-    height: 631px;
+    height: 100%;
   }
   .pgHome__banners::after {
     height: 94px;
@@ -424,6 +424,123 @@ li {
   .pgHome__banners__quickAcess__item__link {
     font-size: 14px;
     gap: 16px;
+  }
+}
+.pgHome__boxs {
+  padding: 56px 0 56px 0;
+  background-color: #FFFAEC;
+}
+.pgHome__boxs > .container {
+  display: flex;
+  align-items: stretch;
+  justify-content: space-between;
+  gap: 30px;
+}
+.pgHome__boxs__result, .pgHome__boxs__news, .pgHome__boxs__events {
+  display: flex;
+  flex: 1;
+  padding: 24px;
+  flex-direction: column;
+  width: 31%;
+  gap: 16px;
+  flex-shrink: 0;
+  border-radius: 6px;
+  border: 1px solid #E4E4E7;
+  background-color: #FFF;
+  box-shadow: 0px 2.869px 45.909px 0px rgba(196, 196, 196, 0.25);
+}
+.pgHome__boxs__result:nth-child(2) .pgHome__boxs__result__list__item__link, .pgHome__boxs__result:nth-child(3) .pgHome__boxs__result__list__item__link, .pgHome__boxs__result:nth-child(2) .pgHome__boxs__news__list__item__link, .pgHome__boxs__result:nth-child(3) .pgHome__boxs__news__list__item__link, .pgHome__boxs__result:nth-child(2) .pgHome__boxs__events__list__item__link, .pgHome__boxs__result:nth-child(3) .pgHome__boxs__events__list__item__link, .pgHome__boxs__news:nth-child(2) .pgHome__boxs__result__list__item__link, .pgHome__boxs__news:nth-child(3) .pgHome__boxs__result__list__item__link, .pgHome__boxs__news:nth-child(2) .pgHome__boxs__news__list__item__link, .pgHome__boxs__news:nth-child(3) .pgHome__boxs__news__list__item__link, .pgHome__boxs__news:nth-child(2) .pgHome__boxs__events__list__item__link, .pgHome__boxs__news:nth-child(3) .pgHome__boxs__events__list__item__link, .pgHome__boxs__events:nth-child(2) .pgHome__boxs__result__list__item__link, .pgHome__boxs__events:nth-child(3) .pgHome__boxs__result__list__item__link, .pgHome__boxs__events:nth-child(2) .pgHome__boxs__news__list__item__link, .pgHome__boxs__events:nth-child(3) .pgHome__boxs__news__list__item__link, .pgHome__boxs__events:nth-child(2) .pgHome__boxs__events__list__item__link, .pgHome__boxs__events:nth-child(3) .pgHome__boxs__events__list__item__link {
+  gap: 8px;
+}
+.pgHome__boxs__result__title, .pgHome__boxs__news__title, .pgHome__boxs__events__title {
+  display: flex;
+  justify-content: space-between;
+  align-items: stretch;
+  color: #003133;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+}
+.pgHome__boxs__result__title > span, .pgHome__boxs__news__title > span, .pgHome__boxs__events__title > span {
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 155%;
+}
+.pgHome__boxs__result__list, .pgHome__boxs__news__list, .pgHome__boxs__events__list {
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+  padding: 16px 0 16px 0;
+  border-bottom: 1px solid #E4E4E7;
+  border-top: 1px solid #E4E4E7;
+}
+.pgHome__boxs__result__list__item__link, .pgHome__boxs__news__list__item__link, .pgHome__boxs__events__list__item__link {
+  position: relative;
+  display: flex;
+  align-items: center;
+  overflow: hidden;
+  color: #555;
+  text-overflow: ellipsis;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 135%;
+  gap: 16px;
+}
+.pgHome__boxs__result__list__item__link__leftIcon, .pgHome__boxs__news__list__item__link__leftIcon, .pgHome__boxs__events__list__item__link__leftIcon {
+  width: 24px;
+  height: 24px;
+  border-radius: 2.833px;
+  background: #0A6564;
+}
+.pgHome__boxs__result__list__item__link__rightIcon, .pgHome__boxs__news__list__item__link__rightIcon, .pgHome__boxs__events__list__item__link__rightIcon {
+  position: absolute;
+  right: 0;
+  width: 13.75px;
+  height: 13.75px;
+}
+.pgHome__boxs__result__list__item__link__time, .pgHome__boxs__news__list__item__link__time, .pgHome__boxs__events__list__item__link__time {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 15%;
+  height: 24px;
+  color: #FFF;
+  padding: 8px 0 8px 0;
+  font-size: 11px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 135%;
+  border-radius: 2.833px;
+  background: #0A6564;
+}
+.pgHome__boxs__result__btn, .pgHome__boxs__news__btn, .pgHome__boxs__events__btn {
+  display: flex;
+  color: #FFF;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 155%;
+  height: 41px;
+  padding: 12px 20px 12px 20px;
+  margin-top: auto;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+  align-self: stretch;
+  border-radius: 8px;
+  background: #00ACA6;
+}
+
+/*=============== BREAKPOINTS ===============*/
+/* For large devices - 1200px */
+@media screen and (max-width: 1200px) {
+  .pgHome__boxs > .container {
+    flex-direction: column;
+  }
+  .pgHome__boxs__result, .pgHome__boxs__news, .pgHome__boxs__events {
+    width: 100%;
   }
 }
 
