create AboutCobasi desk/mobile

--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -12,10 +12,12 @@ $primary-color-PaleSilver: #E4E4E7;
 $primary-color-cyanBlue: #003133;
 $primary-color-darkCyan: #0A6564;
 
+$secondary-color-back: #222;
+
+$tertiary-color-white: #D4D4D8;
+$tertiary-color-green: #05807D;
+
 
 /* ======== Colors erro ======== */
 $secondary-color-white: #FFF;
 $secondary-color-green: #00ACA6;
-
-$tertiary-color-white: #D4D4D8;
-$tertiary-color-green: #05807D;
