create OurNumbers desk/mobile

--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -13,6 +13,7 @@ $primary-color-cyanBlue: #003133;
 $primary-color-darkCyan: #0A6564;
 
 $secondary-color-back: #222;
+$secondary-color-orange: #FF8200;
 
 $tertiary-color-white: #D4D4D8;
 $tertiary-color-green: #05807D;
