--- a/style.css
+++ b/style.css
@@ -647,5 +647,80 @@ li {
     width: 30%;
   }
 }
+.pgHome__ourNumbers > .container {
+  display: flex;
+  flex-direction: column;
+  gap: 48px;
+}
+.pgHome__ourNumbers__top__title {
+  color: #222;
+  font-size: 40px;
+  text-align: center;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+.pgHome__ourNumbers__bottom__boxs {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  align-items: center;
+  gap: 36.33px;
+}
+.pgHome__ourNumbers__bottom__boxs__box {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 61%;
+  gap: 16px;
+}
+.pgHome__ourNumbers__bottom__boxs__box__number {
+  display: flex;
+  align-items: center;
+  color: #222;
+  font-size: 38px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+.pgHome__ourNumbers__bottom__boxs__box__number > mark {
+  color: #FF8200;
+}
+.pgHome__ourNumbers__bottom__boxs__box__contents {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+.pgHome__ourNumbers__bottom__boxs__box__contents__subtitle {
+  color: #222;
+  text-align: center;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+}
+.pgHome__ourNumbers__bottom__boxs__box__contents__text {
+  color: #555;
+  text-align: center;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 150%;
+}
+
+/*=============== BREAKPOINTS ===============*/
+/* For large devices - 1200px */
+@media screen and (max-width: 1200px) {
+  .pgHome__ourNumbers__top__title {
+    font-size: 32px;
+  }
+  .pgHome__ourNumbers__bottom__boxs {
+    flex-direction: column;
+    gap: 48px;
+  }
+  .pgHome__ourNumbers__bottom__boxs__box {
+    width: 100%;
+  }
+}
 
 /*# sourceMappingURL=style.css.map */
