--- a/scss/pages/_ourNumbers.scss
+++ b/scss/pages/_ourNumbers.scss
@@ -1,6 +1,7 @@
 .pgHome {
  
   &__ourNumbers{
+    padding: 0 0 104px 0;
 
     >.container {
       display: flex;
@@ -85,6 +86,7 @@
   .pgHome {
 
     &__ourNumbers{
+      padding: 0 0 40px 0;
 
       &__top{
 
