create footer desk/mobile

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -4,6 +4,7 @@
 
 /* ======== Global ======== */ 
 @import "global/header";
+@import "global/footer";
 
 /* ======== pages ======== */ 
 @import "pages/banner";
