--- a/scss/global/_footer.scss
+++ b/scss/global/_footer.scss
@@ -1,9 +1,28 @@
 .footer {
   padding: 32px 0 32px 0;
   background-color: $tertiary-color-concha;
+  position: relative;
+  overflow: hidden;
 
-  .container {
-  
+  > .container {
+    position: sticky;
+    z-index: 1;
+  }
+
+  &::after{
+    position: absolute;
+    content: "";
+    width: 20px;
+    height: 20px;
+    background: linear-gradient(45deg, #F87537 0%, #FBA81F 100%);
+    object-fit: cover;
+    background-position: center;
+    transition: 0.45s all;
+    right: -40px;
+    width: 173.863px;
+    height: 185.08px;
+    bottom: -84px;
+    border-radius: 50%;
   }
 
   &__logo{
