--- a/scss/global/_header.scss
+++ b/scss/global/_header.scss
@@ -43,6 +43,7 @@
       }
 
       &__acess{
+        position: relative;
         display: flex;
         align-items: center;
         gap: 16px;
@@ -51,31 +52,60 @@
 
           form{
            display: flex;
+           align-items: center;
            gap: 8px;
   
             input {
               display: none;
-              width: 249px;
+              width: 91%;
               height: 48px;
               padding: 10px 14px;
               flex-shrink: 0;
               border-radius: 8px;
               border: 1px solid rgba(208, 213, 221, 0.50);
               transition: .35s all;
+
+              &.active {
+                display: flex;
+                position: absolute;
+                right: 60%;
+                transform: translateX(-50%);
+                column-gap: 37px;
+              }
+
               &:hover{
                 transition: .45s all;
                 opacity: .8;              
               }
+
             }
 
             button {
+              width: 32px;
+              height: 32px;
               transition: .35s all;
+              filter: invert(7%) sepia(17%) saturate(79%) hue-rotate(339deg) brightness(-110%) contrast(86%);
 
              &:hover{
               transition: .45s all;
               opacity: .4;
              }
             }
+          }
+        }
+
+        &__hamburg {
+          display: none;
+          width: 22.556px;
+          height: 32px;
+          cursor: pointer;
+
+          > img {
+            width: 100%;
+            height: 100%;
+            cursor: pointer;
+            object-fit: contain;
+            object-position: center;
           }
         }
 
@@ -171,6 +201,10 @@
 
     &__navigation{
 
+      .header__top__left__acess__translator{
+        display: none;
+      }
+
       &__nav{
         
         &__list{
@@ -186,6 +220,47 @@
               .sublist{
                 transition: .35s all;
                 opacity: 1;
+                z-index: 2;
+              }
+            }
+            &:nth-child(1) {
+              .sublist::before {
+                background-position: 100% 0%;
+              }
+            }
+
+            &:nth-child(2) {
+              .sublist::before {
+                background: url('/img/Governança-Corporativa.png') no-repeat left center;
+              }
+            }
+
+            &:nth-child(3) {
+              .sublist::before {
+                background: url('/img/Informações-Financeiras.png') no-repeat left center;
+                background-position: -79% 80%;
+              }
+            }
+
+            &:nth-child(4) {
+              .sublist{
+                padding: 0 39px 0 0;
+              }
+         
+              .sublist::before {
+                background: url('/img/Serviços-aos-Investidores.png') no-repeat left center;
+              }
+            }
+
+            &:nth-child(5) {
+              .sublist {
+                max-height: 113px;
+              }
+
+              .sublist::before {
+                background: url('/img/Institucional.png') no-repeat left bottom;
+                min-height: 113px;
+          
               }
             }
 
@@ -216,15 +291,16 @@
               transform: translateX(-50%);
               column-gap: 37px;
               opacity: 0;
-
+              overflow: hidden;
+              
               &::before {
                 content: '';
-                min-height: 150px;
+                min-height: 182px;
                 flex-shrink: 0;
                 background: url('/img/coelho.png') no-repeat center center;
                 background-size: cover;
                 transition: .45s all;
-                width: calc((114px / 1));
+                width: calc((115px ));
               }
             
               &__item{
@@ -238,6 +314,282 @@
               }
             }
           }
+        }
+      }
+
+      &__text{
+        display: none;
+      }
+    }
+  }
+}
+
+/*=============== BREAKPOINTS ===============*/
+/* For large devices - 1200px */
+@media screen and (max-width: 1200px) {
+  .header{
+
+    &__top{
+      background: linear-gradient(to bottom, #FFFFFF 103px, $secondary-color-green 36px);
+      padding: 32px 0 0;
+
+      &.active {
+        padding: 32px  0 31.72px 0;
+      }
+
+      &__left{
+        flex-wrap: wrap;
+        row-gap: 32px;
+
+        &__logo {
+          width: 50%;
+
+          &__link {
+            width: 144px;
+            height: 34.281px;
+          }
+        }
+
+        &__tickers{
+          justify-content: center;
+          width: 100%;
+          order: 3;
+          padding: 8.22px 0 8px 0;
+          gap: 2.5px;
+
+          &.active {
+            display: none;
+          }
+
+          &__ticker{
+
+            &__title {
+              color: $secondary-color-white;
+              text-align: center;
+              font-size: 12px;
+              font-style: normal;
+              font-weight: 700;
+              line-height: 20px;
+            }
+            
+            &__price{
+              display: flex;
+              align-items: center;
+              color: $secondary-color-white;
+              text-align: center;
+              font-size: 12px;
+              font-style: normal;
+              font-weight: 500;
+              line-height: 20px;
+              gap: 2px;
+
+              > img {
+                filter: invert(1%) sepia(100%) saturate(0%) hue-rotate(201deg) brightness(106%) contrast(106%);
+                width: 14px;
+                height: 14px;
+              }
+            }
+          }
+        }
+
+        &__acess {
+          width: 50%;
+          justify-content: flex-end;
+          
+          &__hamburg{
+            display: flex;
+
+            &__open {
+              display: flex;
+
+              &.active {
+                display: none;
+              }
+            }
+        
+            &__close {
+              display: none;
+
+              &.active {
+                display: flex;
+              }
+            }
+          }
+
+          &__translator{
+            display: none;
+          }
+        }
+      }
+    }
+
+    &__bottom{
+      display: none;
+      padding: 19px 0 31px 0;
+
+      &.active {
+        display: flex;
+      }
+
+      &__navigation{
+
+        .header__top__left__acess__translator{
+          display: flex;
+          flex-direction: column;
+          z-index: 4;
+          gap: 32px;
+          margin-bottom: 8px;
+
+          &__list{
+
+            &__item {
+              color: $primary-color-white;
+              filter: invert(1%) sepia(100%) saturate(0%) hue-rotate(201deg) brightness(106%) contrast(106%);
+              z-index: 3;
+
+              .sublist {
+                width: 30%;
+                left: 15%;
+                transform: translate(-50%);
+              }
+            }
+          }
+
+          &__accessibility{
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            background-color: $tertiary-color-green;
+            padding: 14px 24px 14px 24px;
+            border-radius: 8px;
+      
+            &__item {
+              display: flex;
+              gap: 10px;
+              color: #FFF;
+              font-size: 14px;
+              font-style: normal;
+              font-weight: 400;
+              line-height: 135%;
+              cursor: pointer;
+
+              &__link {
+                display: flex;
+              }
+
+              .sublist {
+                display: flex;
+                gap: 15px;
+
+                &__item{
+
+                  &__link{
+                    color: $secondary-color-white;
+                    font-size: 16px;
+                    font-style: normal;
+                    font-weight: 600;
+                    line-height: 135%;
+                  }
+                }
+              }
+
+              > svg{
+                height: 19px;
+                align-items: center;
+                gap: 7.931px;
+                border-radius: 792.31px;
+                border: 0.793px solid $secondary-color-green;
+                background: $secondary-color-white;
+                width: 39px;
+                padding-right: 15px;
+              }
+            }
+          }
+        }
+
+        &__nav {
+
+          &__list {
+            flex-direction: column;
+            gap: 0px;
+
+            &__item {
+              width: 100%;
+              padding-left: 15px;
+              padding-right: 15px;
+              margin-left: auto;
+              margin-right: auto;
+          
+              &:nth-child(5) {
+                .sublist {
+                  height: 0px;
+                }
+              }
+            
+              &:hover{
+                box-shadow: 30vw 0 0px 0px $tertiary-color-green, -23vw 0px 0px 0px $tertiary-color-green;
+                background-color: $tertiary-color-green;
+
+                .header__bottom__navigation__nav__list__item__link::after {
+                  transform: rotate(179deg);
+                }
+
+                .sublist{
+                  display: flex;
+                  height: 178px;
+                  max-height: 178px;
+                  padding: 0;
+                  transition: .66s all;
+                }
+
+                &:nth-child(5) {
+                  .sublist {
+                    height: 100px ;
+                  }
+                }
+              }
+
+              &__link {
+                display: flex;
+                justify-content: space-between;
+                padding: 32px 0 32px 0; 
+                border-bottom: 1px solid rgba(255, 255, 255, 0.60);
+
+                &::after {
+                  content: "";
+                  width: 24px;
+                  height: 24px;
+                  background: url(/img/icons/Icone-Mobile.png) no-repeat center center;
+                  background-size: cover;
+                  transition: 0.45s all;
+                }
+              }
+
+              .sublist {
+                position: relative;
+                top: 0;
+                width: 100vw;
+                max-height: 0;
+                padding: 0;
+                transform: translateX(0%);
+                left: 0px;
+                justify-self: center;
+                box-shadow: 30vw 0 0px 0px $tertiary-color-green, -23vw 0px 0px 0px $tertiary-color-green;
+              }
+            }
+          }
+        }
+
+        &__text{
+          display: flex;
+          color: $secondary-color-white;
+          text-align: center;
+          font-size: 14px;
+          font-style: normal;
+          font-weight: 600;
+          line-height: 20px;
+          padding: 27px 0px 0px 0px;
+          justify-content: center;
         }
       }
     }
