--- a/scss/pages/_banner.scss
+++ b/scss/pages/_banner.scss
@@ -52,7 +52,7 @@
         display: flex;
         flex-direction: column;
         width: 40%;
-        height: 100%;
+        // height: 100%;
 
         gap: 16px;
 
@@ -126,7 +126,8 @@
       }
   
       &__banner{
-      
+        height: 631px;
+
         &__img{
       
         }
@@ -144,6 +145,10 @@
           &__title {
             font-size: 32px;
             font-weight: 700;
+
+            > mark{
+              font-size: 32px;
+            }
           }
   
           &__text {
