--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,6 +1,7 @@
 @import "base/variables";
 @import "base/reset";
 @import "base/grid";
+@import "base/scrollbar";
 
 /* ======== Global ======== */ 
 @import "global/header";
