--- a/style.css
+++ b/style.css
@@ -110,6 +110,20 @@ li {
     max-width: 1200px;
   }
 }
+/* ======= Scroll Styles ======= */
+::-webkit-scrollbar-track {
+  background-color: #FFFFFF;
+}
+
+::-webkit-scrollbar {
+  width: 9px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #00ACA6;
+  border-radius: 5px;
+}
+
 /* ======== Global ======== */
 .header__top {
   width: 100%;
