--- a/scss/global/_header.scss
+++ b/scss/global/_header.scss
@@ -424,11 +424,18 @@
     }
 
     &__bottom{
-      display: none;
-      padding: 19px 0 31px 0;
+      opacity: 0;
+      height: 0;
+      padding: 0;
 
       &.active {
-        display: flex;
+        position: absolute;
+        z-index: 1;
+        width: 100%;
+        height: 100%;
+        opacity: 1;
+        transition: .45s all;
+        padding: 19px 0 31px 0;
       }
 
       &__navigation{
