--- a/scss/style.scss
+++ b/scss/style.scss
@@ -6,6 +6,7 @@
 /* ======== Global ======== */ 
 @import "global/header";
 @import "global/footer";
+@import "global/scrollup";
 
 /* ======== pages ======== */ 
 @import "pages/banner";
