create slick banner na section links de facil acessos

--- a/style.css
+++ b/style.css
@@ -853,6 +853,36 @@ li {
   bottom: 20px;
 }
 
+.slick-list {
+  width: 100%;
+}
+
+.slick-prev::before,
+.slick-next::before {
+  content: "";
+  display: block;
+  width: 18.701px;
+  height: 14px;
+}
+
+.slick-prev::before {
+  background: url("/img/icons/arrow-left.png") no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+.slick-prev:hover::before {
+  background: url("/img/icons/arrow-left-orange.png") no-repeat !important;
+}
+
+.slick-next::before {
+  background: url("/img/icons/arrow-right.png") no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+.slick-next:hover::before {
+  background: url("/img/icons/arrow-right-orange.png") no-repeat !important;
+}
+
 /* ======== pages ======== */
 .pgHome__banners {
   position: relative;
@@ -978,8 +1008,6 @@ li {
   }
   .pgHome__banners__quickAcess .container {
     flex-wrap: nowrap;
-    overflow-y: scroll;
-    scrollbar-width: none;
     gap: 33px;
   }
   .pgHome__banners__quickAcess__item {
