--- a/scss/pages/_banner.scss
+++ b/scss/pages/_banner.scss
@@ -163,8 +163,8 @@
     
         .container{
           flex-wrap: nowrap;
-          overflow-y: scroll;
-          scrollbar-width: none;
+          // overflow-y: scroll;
+          // scrollbar-width: none;
           gap: 33px;
         }
   
