--- a/scss/style.scss
+++ b/scss/style.scss
@@ -7,6 +7,7 @@
 @import "global/header";
 @import "global/footer";
 @import "global/scrollup";
+@import "global/slick";
 
 /* ======== pages ======== */ 
 @import "pages/banner";
